setting up GoogleAuthUiClient

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Compose-FirebaseAuth</string>
+    <string name="client_id">936026791052-erpba6ep8vo592r7a539hpebug6femtd.apps.googleusercontent.com</string>
 </resources>
